# decarate

./: .gitattributes  .gitignore  README.md  gradle.properties  settings.gradle  xiaomi_hyperos_setup.md
app/: build.gradle
documents/: development_spec_v2.19.2.md
documents/thesis/: README.md  (+4 more)
native/gridtimer_native/: Cargo.toml
native/gridtimer_native/src/: ai_client.rs  app_data.rs  finance_profile.rs  lib.rs  note_documents.rs  sync_core.rs  timer_insights.rs  tooling.rs
native/gridtimer_native/src/sourcegen/: android_sources.rs  kotlin_sources.rs
old_apks/: grid_timer_app_v2.10.0_20260419_054245395.apk  grid_timer_app_v2.10.0_20260419_131012643.apk  grid_timer_app_v2.10.0_20260419_135551889.apk  grid_timer_app_v2.10.0_20260419_150450416.apk  grid_timer_app_v2.10.10_20260423_180101.apk  grid_timer_app_v2.10.11_20260423_181253.apk  grid_timer_app_v2.10.12_1777019237200.apk  grid_timer_app_v2.10.13_1777063616813.apk  grid_timer_app_v2.10.1_20260419_163637806.apk  grid_timer_app_v2.10.2_20260419_191414366.apk  grid_timer_app_v2.10.3_20260420_134721229.apk  grid_timer_app_v2.10.4_20260420_204519274.apk  grid_timer_app_v2.10.4_20260420_223638990.apk  grid_timer_app_v2.10.4_20260420_230722801.apk  grid_timer_app_v2.10.4_20260420_235441510.apk  grid_timer_app_v2.10.5_20260421_021112382.apk  grid_timer_app_v2.10.6_20260421_185451001.apk  grid_timer_app_v2.10.6_20260421_210450470.apk  grid_timer_app_v2.10.7_20260421_220639072.apk  grid_timer_app_v2.10.8_20260421_231948811.apk  grid_timer_app_v2.10.9_1776851234216.apk  grid_timer_app_v2.10.9_20260422_005653792.apk  (+67 more)
(+6 files in other folders)
