[package]
name="gridtimer_native"
version="0.0.0"
edition="2021"
[lib]
crate-type=["cdylib","rlib"]
doctest=false
[features]
desktop=["dep:eframe"]
[dependencies]
jni="0.21.1"
indexmap={version="2.13.1",features=["serde"]}
pulldown-cmark="0.13.0"
rand="0.8.5"
serde={version="1.0.228",features=["derive"]}
serde_json="1.0.145"
sha2="0.10.8"
ureq={version="2.12.1",default-features=false,features=["tls"]}
eframe={version="0.27.2",optional=true,default-features=false,features=["default_fonts","glow"]}

[[bin]]
name="timer_windows_client"
path="src/bin/timer_windows_client.rs"
required-features=["desktop"]

[[bin]]
name="timer_sync_server"
path="src/bin/timer_sync_server.rs"

[[bin]]
name="timer_sync_launcher"
path="src/bin/timer_sync_launcher.rs"
